core/testing/snapshots/errors/validation/break_in_lambda_in_loop.snap
### TITLE ###
Break in lambda in loop
### INPUT ###
for i in range(5):
    f = fn():
        break
    f()
### STDERR ###
error[RAD20030]: 'break' can only be used inside a loop
  --> <script>:3:9
  |
2 |     f = fn():
3 |         break
  |         ^^^^^
4 |     f()
  |
   = info: rad explain RAD20030


### EXIT ###
1
